# roman_byelyy_mlops_hw2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
roman_byelyy_mlops_hw2/configs/: config.yaml  postprocessing.yaml  preprocessing.yaml  training.yaml
roman_byelyy_mlops_hw2/package/: .gitignore  infer.py  model.joblib.dvc  model.pkl.dvc  test.csv.dvc  train.csv.dvc  train.py  utils.py
